--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,6 +1,9 @@
 # Degree
 - degree: Full Stack Webdeveloper Nanodegree  
+Nill
   uni: Udacity
+ Nill
   year: June, 2014 &mdash; January, 2015
+  Nill
   # awards:
   # summary:
